Revert to jdk 8